[gd_scene load_steps=7 format=3 uid="uid://bh7x3lam4n2qw"]

[ext_resource type="Script" uid="uid://bc30e7r24phsi" path="res://Code/UserInterface/VendorUI.gd" id="1_vendor_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_main_panel"]
bg_color = Color(0.1, 0.12, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.6, 1, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_header"]
bg_color = Color(0.05, 0.08, 0.12, 1)
border_width_bottom = 1
border_color = Color(0.2, 0.6, 1, 0.6)
corner_radius_top_left = 6
corner_radius_top_right = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_close_hover"]
bg_color = Color(1, 0.3, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_close_normal"]
bg_color = Color(0.8, 0.2, 0.2, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_footer"]
bg_color = Color(0.05, 0.08, 0.12, 1)
border_width_top = 1
border_color = Color(0.2, 0.6, 1, 0.6)
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="VendorUI" type="Control"]
z_index = 100
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -311.0
offset_right = 561.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("1_vendor_ui")

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_main_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="HeaderBar" type="Control" parent="MainPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="HeaderPanel" type="Panel" parent="MainPanel/VBoxContainer/HeaderBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_header")

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer/HeaderBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 10.0
offset_right = -15.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MainPanel/VBoxContainer/HeaderBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Vendor Terminal"
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="MainPanel/VBoxContainer/HeaderBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.2, 0.8, 1, 1)
theme_override_font_sizes/font_size = 12
text = "[OPERATIONAL]"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="MainPanel/VBoxContainer/HeaderBar/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_close_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_close_normal")
text = "âœ•"

[node name="ContentArea" type="Control" parent="MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CategoryTabs" type="TabContainer" parent="MainPanel/VBoxContainer/ContentArea"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_unselected_color = Color(0.7, 0.8, 0.9, 1)
theme_override_colors/font_selected_color = Color(0.2, 0.8, 1, 1)

[node name="ItemScroll" type="ScrollContainer" parent="MainPanel/VBoxContainer/ContentArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="ItemGrid" type="GridContainer" parent="MainPanel/VBoxContainer/ContentArea/ItemScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="FooterBar" type="Control" parent="MainPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="FooterPanel" type="Panel" parent="MainPanel/VBoxContainer/FooterBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_footer")

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer/FooterBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 8.0
offset_right = -15.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="InfoLabel" type="Label" parent="MainPanel/VBoxContainer/FooterBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.7, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 10
text = "Ready"
vertical_alignment = 1

[node name="HackIndicator" type="Control" parent="MainPanel/VBoxContainer/FooterBar/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="HackLabel" type="Label" parent="MainPanel/VBoxContainer/FooterBar/HBoxContainer/HackIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.5, 0, 1)
theme_override_font_sizes/font_size = 10
text = "[HACKED]"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -5.0
